changed pagination font and tried to fix the overlapping with letter-spacing - looks really bad - will continue to work on styling

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -33,3 +33,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 10px 0 15px 0;
     padding: 20px;
 }
+
+.paginate {
+    margin: 0 0 20px 0;
+    font-family: 'sinkin_sans200_x_light', sans-serif;
+    letter-spacing: 10px;
+    text-align: center;
+}
